--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8082
+server.port=8080
 
 #spring.h2.console.enabled=true
 #spring.datasource.url=jdbc:h2:mem:dbapp
@@ -14,3 +14,5 @@ spring.datasource.password=admin
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql=true
+welcome.message=Hello
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
